--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -18,5 +18,6 @@
     "description": "Description",
     "Add Product": "Add Product",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "searchlist": "Listeyi ara"
 }
