--- a/assets/lang/tr-TR.json
+++ b/assets/lang/tr-TR.json
@@ -18,5 +18,6 @@
     "description": "Açıklama",
     "Add Product": "Ürün Ekle",
     "yes": "Evet",
-    "no": "Hayır"
+    "no": "Hayır",
+    "searchlist": "Listeyi ara"
 }
