date time picker added

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -19,5 +19,9 @@
     "Add Product": "Add Product",
     "yes": "Yes",
     "no": "No",
-    "searchlist": "Listeyi ara"
+    "searchlist": "Listeyi ara",
+    "today": "Today",
+    "tommorrow": "Tommorrow",
+    "now": "now",
+    "en": "en"
 }
