--- a/assets/lang/tr-TR.json
+++ b/assets/lang/tr-TR.json
@@ -19,5 +19,9 @@
     "Add Product": "Ürün Ekle",
     "yes": "Evet",
     "no": "Hayır",
-    "searchlist": "Listeyi ara"
+    "searchlist": "Listeyi ara",
+    "today": "Bugün",
+    "tommorrow": "Yarın",
+    "now": "Şimdi",
+    "en": "tr"
 }
